kubernetes/02-apps/04-anime/06-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: anime
  name: anime-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`anime.kalexlab.xyz`)
      services:
        - name: app
          port: 9000
  tls:
    secretName: anime-ingress-certificate-secret
